# pms-ai

./: .env.example  .env.schema  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: onboard.md
docs/superpowers/plans/: 2026-06-01-pms-ai-plugin-config-core-plan.md
docs/superpowers/specs/: 2026-05-31-pms-ai-plugin-config-core-design.md  2026-05-31-pms-ai-roadmap.md
skills/config/: SKILL.md  config.template.yaml
src/pms_ai/: __init__.py  cli.py  config.py
tests/: test_config.py
