[project]
name = "pms-ai"
version = "0.1.0"
description = "A staging ground for projects: stage identity/config/requirements/plan/artifacts, then let dynamic multi-agent workflows execute them. Subsystem #1: plugin shell + config core."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pms-ai = "pms_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pms_ai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
